# alpha-trace

./: .gitignore  .tags  .travis.yml  .update-tags  CMakeCache.txt  CMakeLists.txt  COPYING.txt  README.markdown  cmake_install.cmake  file_list  tags
CMake/: DownloadCxxOpts.cmake  DownloadSFML.cmake  Downloadspdlog.cmake
cfg/: file_list  gen_file_list  ycm_extra_conf.py
include/: .graphics_alpha.hpp.swp  buffers_alpha.hpp  camera_alpha.hpp  colours.hpp  graphics_alpha.hpp  math_alpha.hpp  ppm_alpha.hpp  rasteriser_alpha.hpp  shader.hpp  svg_alpha.hpp  tags  vertex_import.hpp
include/alpha/: buffers.hpp  buffers_fast.hpp  camera.hpp  colours.hpp  logging.hpp  math.hpp  mesh_renderer.hpp  objects.hpp  rasteriser.hpp  shader.hpp  svg.hpp  trace.hpp  tracer.hpp  utils.hpp  vertex_import.hpp
spike/art/: logo.xcf
spike/bench/: CMakeLists.txt  a.out  antialiasing.cpp  buffer.cpp  cow.hpp  math_bench.cpp  rasteriser.cpp  shader.hpp  sqrt_comp.cpp  sse.cpp  unique_ptr.cpp  vector_gmtl.cpp
spike/code/: .pinhole.cpp.swp  .projection.cpp.swp  CMakeLists.txt  a.out  aek.cpp  antialiasing.cpp  cam_mat.txt  camera_settings.cfg  canvas_cords  canvas_cords.cpp  cow.hpp  cow_pers.cpp  cow_vert.hpp  cow_vert.raw  cube.cpp  cube.raw  cube_vert.hpp  cube_vert.raw  decompose.m  geometry.cpp  geometry.h  local_world.cpp  mc.cpp  mesh.cpp  mod_cube.hpp  mod_cube.raw  opengl.cpp  output.ppm  perspproj.cpp  pinhole.cpp  pinhole_test  pinhole_test.cpp  process_raw  projection.cpp  projmatrix.cpp  raster2d.ppm  raster3d  raster3d.cpp  rasterisation.cpp  rasterisation_test  (+11 more)
spike/models/: CMakeLists.txt  axis.raw  boat.raw  camera_settings.cfg  cube.raw
spike/test/: CMakeLists.txt  buffer_test.cpp
src/: CMakeLists.txt  Makefile  alpha.cpp  cmake_install.cmake  demo.cpp  demo.cxx  process_raw  render_mesh.cpp
src/include/: .math_alpha.hpp.swp  colours.hpp  math_alpha.hpp
test/: .math_alpha_test.cpp.swp  CMakeLists.txt  a.out  buffer_test.cpp  math_alpha_test.cpp  math_bench.cpp  math_test.cpp  mesh_renderer_test.cpp  ppm_alpha_test.cpp  spdlog_test.cpp  trace_test.cpp
test/truth/: .math_alpha_test.cpp.swp  a.out  math_alpha_test.cpp
