# Set the executable paths
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
# Add executables here
# add_executable(buffer_bench buffer.cpp)
# add_executable(raster_bench rasteriser.cpp)
# add_executable(unique_ptr unique_ptr.cpp)

# Target specific stuff here
# target_link_libraries(buffer_bench benchmark)
# target_link_libraries(raster_bench benchmark)
# target_link_libraries(unique_ptr benchmark)
