# Set the executable paths
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
# Add executables here
add_executable(canvas_cords canvas_cords.cpp)
add_executable(pinhole pinhole.cpp)
add_executable(rasterisation rasterisation.cpp)
add_executable(opengl opengl.cpp)
add_executable(cube cube.cpp)
add_executable(antialiasing antialiasing.cpp)
set(CORELIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY} m)
target_link_libraries(opengl ${CORELIBS})
cotire(canvas_cords)
cotire(pinhole)
cotire(opengl)
